<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="Profile"
            app:titleTextColor="@color/colorAccent" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="40dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/user_profile_pic"
                    android:padding="5dp"
                    android:src="@drawable/ic_person"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorAccent" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/float_button"
                    android:padding="3dp"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.594"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="266dp"
                    android:layout_height="31dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/profile_name"
                    android:textSize="16dp"
                    android:textColor="@color/profile_text_view_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.117"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:background="@drawable/text_background"
                    android:shadowColor="@color/text_view_shadow_color"
                    android:shadowDx="-2"
                    android:shadowDy="-2"
                    android:shadowRadius="50"
                    android:text="@string/profile_user_name"
                    android:textColor="@color/profile_text_color"
                    android:textSize="17dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.529"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_text_view"/>

                <TextView
                    android:id="@+id/email_text_view"
                    android:layout_width="266dp"
                    android:layout_height="31dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/profile_email"
                    android:textSize="16dp"
                    android:textColor="@color/profile_text_view_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.117"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_name" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:background="@drawable/text_background"
                    android:text="@string/profile_user_email"
                    android:textColor="@color/profile_text_color"
                    android:textSize="17dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.529"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_text_view" />

                <TextView
                    android:id="@+id/employee_id_text_view"
                    android:layout_width="266dp"
                    android:layout_height="31dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/profile_employee_id"
                    android:textSize="16dp"
                    android:textColor="@color/profile_text_view_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.117"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_email" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/profile_employee_id"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:background="@drawable/text_background"
                    android:text="@string/profile_user_employee_id"
                    android:textColor="@color/profile_text_color"
                    android:textSize="17dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.529"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/employee_id_text_view" />

                <TextView
                    android:id="@+id/ou_text_view"
                    android:layout_width="266dp"
                    android:layout_height="31dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/profile_ou"
                    android:textSize="16dp"
                    android:textColor="@color/profile_text_view_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.117"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_employee_id" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/profile_ou"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:background="@drawable/text_background"
                    android:text="@string/profile_user_ou"
                    android:textColor="@color/profile_text_color"
                    android:textSize="17dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.529"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ou_text_view" />

                <TextView
                    android:id="@+id/ou1_text_view"
                    android:layout_width="266dp"
                    android:layout_height="31dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/profile_ou_1"
                    android:textSize="16dp"
                    android:textColor="@color/profile_text_view_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.117"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_ou" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/profile_ou1"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:background="@drawable/text_background"
                    android:text="@string/profile_user_ou_1"
                    android:textColor="@color/profile_text_color"
                    android:textSize="17dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.529"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ou1_text_view" />

                <TextView
                    android:id="@+id/manager_text_view"
                    android:layout_width="266dp"
                    android:layout_height="31dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/profile_text_view_color"
                    android:text="@string/profile_manager"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.117"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_ou1" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/profile_manager"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:background="@drawable/text_background"
                    android:text="@string/profile_user_manager"
                    android:textColor="@color/profile_text_color"
                    android:textSize="17dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.529"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/manager_text_view" />

                <TextView
                    android:id="@+id/position_text_view"
                    android:layout_width="266dp"
                    android:layout_height="31dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/profile_position"
                    android:textSize="16dp"
                    android:textColor="@color/profile_text_view_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.117"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_manager" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/profile_position"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:background="@drawable/text_background"
                    android:text="@string/profile_user_position"
                    android:textColor="@color/profile_text_color"
                    android:textSize="17dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.529"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/position_text_view" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>