<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vh_lb_layout_cardview"
        app:cardCornerRadius="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/vh_lb_title_margin_start"
                android:layout_marginTop="@dimen/vh_lb_title_margin_top"
                android:text="@string/taken_leave"
                android:textColor="@color/black"
                android:textSize="@dimen/vh_lb_title"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/vh_lb_leaves"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/vh_lb_leaves_margin_start"
                    android:layout_marginTop="@dimen/vh_lb_leaves_margin_top"
                    android:text="@string/annual_leave"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/vh_lb_leave_count_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vh_lb_leaves_margin_top"
                    android:layout_marginRight="30dp"
                    android:text="@string/vh_lb_leave_count"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/vh_lb_leaves"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/vh_lb_leaves_margin_start"
                    android:layout_marginTop="@dimen/vh_lb_leaves_margin_top"
                    android:text="@string/casual_leave"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="30dp"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="355dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/medical_leave"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="30dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="355dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/unpaid_leave"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="30dp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="#444" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="355dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/total_taken_leave"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="30dp"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>