<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_medium_2"
    android:layout_marginEnd="@dimen/margin_medium_2">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_date"
        android:textSize="@dimen/text_regular_2x"
        android:textColor="@color/colorSecondaryText"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20-06-2022(Thu)"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/tvDateLabel"
        android:textSize="@dimen/text_regular_2x"
        android:textColor="@color/colorSecondaryText"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCheckInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_check_in"
        android:layout_below="@id/tvDateLabel"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular_2x"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCheckInReportTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8:00"
        android:textColor="@color/colorSecondaryText"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/tvCheckInLabel"
        android:textSize="@dimen/text_regular_2x"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCheckOutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCheckInLabel"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/lbl_check_out_report"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular_2x" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCheckOutReportTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="17:00"
        android:textColor="@color/colorSecondaryText"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/tvCheckOutLabel"
        android:textSize="@dimen/text_regular_2x"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_total_report"
        android:layout_below="@id/tvCheckOutLabel"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular_2x"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTotalReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="9 hrs"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/tvTotalLabel"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular_2x"/>


</RelativeLayout>